# msu_boltzmann

./: README.md
figs/: DelMuvsR.py  MuTvsR.py
progdata/resinfo/: decays_pdg_weak.txt  resonances_pdg_weak.txt
scottrun/: CMakeLists.txt  b3dmain.cc  hyperdata  msuboltz.cc  muTvsR.cc  parameters_sampler.txt  qualifiers.txt
scottrun/logs/: default_0.txt
scottrun/model_output/: fixed_parameters.txt
scottrun/mucalc_results/: muTvsR_B0_tau10.txt  muTvsR_B0_tau11.txt  muTvsR_B0_tau12.txt  muTvsR_B0_tau13.txt  muTvsR_B0_tau14.txt  muTvsR_B0_tau15.txt  muTvsR_B0_tau16.txt  muTvsR_B0_tau17.txt  muTvsR_B0_tau18.txt  muTvsR_B0_tau19.txt  muTvsR_B0_tau2.txt  muTvsR_B0_tau20.txt  muTvsR_B0_tau21.txt  muTvsR_B0_tau22.txt  muTvsR_B0_tau23.txt  muTvsR_B0_tau24.txt  muTvsR_B0_tau25.txt  muTvsR_B0_tau26.txt  muTvsR_B0_tau27.txt  muTvsR_B0_tau28.txt  muTvsR_B0_tau29.txt  muTvsR_B0_tau3.txt  muTvsR_B0_tau30.txt  muTvsR_B0_tau31.txt  muTvsR_B0_tau32.txt  muTvsR_B0_tau33.txt  muTvsR_B0_tau34.txt  muTvsR_B0_tau35.txt  muTvsR_B0_tau36.txt  muTvsR_B0_tau37.txt  muTvsR_B0_tau38.txt  muTvsR_B0_tau39.txt  muTvsR_B0_tau4.txt  muTvsR_B0_tau40.txt  muTvsR_B0_tau5.txt  muTvsR_B0_tau6.txt  muTvsR_B0_tau7.txt  muTvsR_B0_tau8.txt  muTvsR_B0_tau9.txt  muTvsR_B1_tau10.txt  (+583 more)
scottrun_bf/: CMakeLists.txt  msubal.cc  runner.sh
scottrun_bf/model_output/: fixed_parameters.txt
scottrun_bf/udsdata/: udsparameters.txt
software/: CMakeLists.txt
software/include/: acceptance.h  action.h  b3d.h  balancearrays.h  cell.h  eqofst.h  hist.h  inelastic.h  msupart.h  mutinfo.h  part.h  resonances.h  seinfo.h
software/include/msu_boltzmann/: acceptance.h  action.h  balancearrays.h  boltzmanndefs.h  cell.h  decay.h  inelastic.h  msu_boltzmann.h  msupart.h  mutinfo.h  seinfo.h
software/src/: acceptance.cc  acceptance_ALICE.cc  acceptance_STAR.cc  acceptance_cheap.cc  action.cc  action_perform.cc  action_perform_activate.cc  action_perform_collide.cc  action_perform_decay.cc  action_perform_exitcell.cc  action_perform_mutcalc.cc  addaction.cc  annihilate.cc  b3d.cc  b3dio.cc  b3dsubs.cc  balancearrays.cc  bfnumer.cc  cell.cc  charge.cc  collide.cc  decay.cc  findcollision.cc  hyper.cc  inelastic.cc  makepart.cc  msu_boltzmann.cc  msu_boltzmann_io.cc  msu_boltzmann_subs.cc  msupart.cc  mutinfo.cc  part.cc  resinfo.cc  reslist.cc  reslistio.cc  sampler.cc  scatter.cc
